@@ -40,9 +40,17 @@ package org.jruby;
 import java.io.InputStream;
 import java.io.PrintStream;
 import java.io.File;
+import java.io.FileDescriptor;
 
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.lang.management.ManagementFactory;
+import java.lang.management.RuntimeMXBean;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Properties;
 import org.jruby.exceptions.MainExitException;
 import org.jruby.exceptions.RaiseException;
 import org.jruby.exceptions.ThreadKill;
@@ -51,6 +59,9 @@ import org.jruby.runtime.ThreadContext;
 import org.jruby.runtime.builtin.IRubyObject;
 import org.jruby.util.SafePropertyAccessor;
 import org.jruby.util.SimpleSampler;
+import org.jruby.util.cli.OutputStrings;
+import org.jruby.util.log.Logger;
+import org.jruby.util.log.LoggerFactory;
 
 /**
  * Class used to launch the interpreter.
@@ -62,6 +73,8 @@ import org.jruby.util.SimpleSampler;
  * @author  jpetersen
  */
 public class Main {
+    private static final Logger LOG = LoggerFactory.getLogger("Main");
+    
     public Main(RubyInstanceConfig config) {
         this(config, false);
     }
@@ -84,7 +97,60 @@ public class Main {
     }
 
     private Main(boolean hardExit) {
-        this(new RubyInstanceConfig(), hardExit);
+        // used only from main(String[]), so we process dotfile here
+        processDotfile();
+        this.config = new RubyInstanceConfig();
+        config.setHardExit(hardExit);
+    }
+    
+    private static List<String> getDotfileDirectories() {
+        ArrayList<String> searchList = new ArrayList<String>();
+        for (String homeProp : new String[] {"user.dir", "user.home"}) {
+            String home = SafePropertyAccessor.getProperty(homeProp);
+            if (home != null) searchList.add(home);
+        }
+        
+        // JVM sometimes picks odd location for user.home based on a registry entry
+        // (see http://bugs.sun.com/view_bug.do?bug_id=4787931).  Add extra check in 
+        // case that entry is wrong. Add before user.home in search list.
+        if (Platform.IS_WINDOWS) {
+            String homeDrive = System.getenv("HOMEDRIVE");
+            String homePath = System.getenv("HOMEPATH");
+            if (homeDrive != null && homePath != null) {
+                searchList.add(1, (homeDrive + homePath).replace('\\', '/'));
+            }
+        }
+        
+        return searchList;
+    }
+    
+    public static void processDotfile() {
+        for (String home : getDotfileDirectories()) {
+            File dotfile = new File(home + "/.jrubyrc");
+            if (dotfile.exists()) loadJRubyProperties(dotfile);
+        }
+    }
+
+    private static void loadJRubyProperties(File dotfile) {
+        FileInputStream fis = null;
+        
+        try {
+            // update system properties with long form jruby properties from .jrubyrc
+            Properties sysProps = System.getProperties();
+            Properties newProps = new Properties();
+            // load properties and re-set as jruby.*
+            fis = new FileInputStream(dotfile);
+            newProps.load(fis);
+            for (Map.Entry entry : newProps.entrySet()) {
+                sysProps.put("jruby." + entry.getKey(), entry.getValue());
+            }
+        } catch (IOException ioe) {
+            LOG.debug("exception loading " + dotfile, ioe);
+        } catch (SecurityException se) {
+            LOG.debug("exception loading " + dotfile, se);
+        } finally {
+            if (fis != null) try {fis.close();} catch (Exception e) {}        
+        }
     }
 
     public static class Status {
@@ -168,7 +234,7 @@ public class Main {
         doShowVersion();
         doShowCopyright();
 
-        if (!config.shouldRunInterpreter() ) {
+        if (!config.getShouldRunInterpreter() ) {
             doPrintUsage(false);
             doPrintProperties();
             return new Status();
@@ -187,10 +253,10 @@ public class Main {
             if (in == null) {
                 // no script to run, return success
                 return new Status();
-            } else if (config.isxFlag() && !config.hasShebangLine()) {
+            } else if (config.isXFlag() && !config.hasShebangLine()) {
                 // no shebang was found and x option is set
                 throw new MainExitException(1, "jruby: no Ruby script found in input (LoadError)");
-            } else if (config.isShouldCheckSyntax()) {
+            } else if (config.getShouldCheckSyntax()) {
                 // check syntax only and exit
                 return doCheckSyntax(runtime, in, filename);
             } else {
@@ -214,42 +280,73 @@ public class Main {
         return new Status(1);
     }
 
+    /**
+     * Print a nicer stack size error since Rubyists aren't used to seeing this.
+     */
     private Status handleStackOverflow(StackOverflowError soe) {
-        // produce a nicer error since Rubyists aren't used to seeing this
-        System.gc();
-        String stackMax = SafePropertyAccessor.getProperty("jruby.stack.max");
-        String message = "";
-        if (stackMax != null) {
-            message = " of " + stackMax;
+        String memoryMax = getRuntimeFlagValue("-Xss");
+
+        if (memoryMax != null) {
+            config.getError().println("Error: Your application used more stack memory than the safety cap of " + memoryMax + ".");
+        } else {
+            config.getError().println("Error: Your application used more stack memory than the default safety cap.");
         }
-        config.getError().println("Error: Your application used more stack memory than the safety cap" + message + ".");
         config.getError().println("Specify -J-Xss####k to increase it (#### = cap size in KB).");
+
         if (config.isVerbose()) {
             config.getError().println("Exception trace follows:");
-            soe.printStackTrace();
+            soe.printStackTrace(config.getError());
         } else {
             config.getError().println("Specify -w for full StackOverflowError stack trace");
         }
+
         return new Status(1);
     }
 
+    /**
+     * Print a nicer memory error since Rubyists aren't used to seeing this.
+     */
     private Status handleOutOfMemory(OutOfMemoryError oome) {
-        // produce a nicer error since Rubyists aren't used to seeing this
-        System.gc();
-        String memoryMax = SafePropertyAccessor.getProperty("jruby.memory.max");
-        String message = "";
-        if (memoryMax != null) {
-            message = " of " + memoryMax;
+        System.gc(); // try to clean up a bit of space, hopefully, so we can report this error
+
+        String oomeMessage = oome.getMessage();
+
+        if (oomeMessage.contains("PermGen")) { // report permgen memory error
+            config.getError().println("Error: Your application exhausted PermGen area of the heap.");
+            config.getError().println("Specify -J-XX:MaxPermSize=###M to increase it (### = PermGen size in MB).");
+
+        } else { // report heap memory error
+
+            String memoryMax = getRuntimeFlagValue("-Xmx");
+
+            if (memoryMax != null) {
+                config.getError().println("Error: Your application used more memory than the safety cap of " + memoryMax + ".");
+            } else {
+                config.getError().println("Error: Your application used more memory than the default safety cap.");
+            }
+            config.getError().println("Specify -J-Xmx####m to increase it (#### = cap size in MB).");
         }
-        config.getError().println("Error: Your application used more memory than the safety cap" + message + ".");
-        config.getError().println("Specify -J-Xmx####m to increase it (#### = cap size in MB).");
+        
         if (config.isVerbose()) {
             config.getError().println("Exception trace follows:");
-            oome.printStackTrace();
+            oome.printStackTrace(config.getError());
         } else {
             config.getError().println("Specify -w for full OutOfMemoryError stack trace");
         }
+
         return new Status(1);
+    }
+
+    private String getRuntimeFlagValue(String prefix) {
+        RuntimeMXBean runtime = ManagementFactory.getRuntimeMXBean();
+
+        for (String param : runtime.getInputArguments()) {
+            if (param.startsWith(prefix)) {
+                return param.substring(prefix.length()).toUpperCase();
+            }
+        }
+
+        return null;
     }
 
     private Status handleMainExit(MainExitException mee) {
@@ -291,43 +388,48 @@ public class Main {
     }
 
     private Status doCheckSyntax(Ruby runtime, InputStream in, String filename) throws RaiseException {
-        int status = 0;
+        // check primary script
+        boolean status = checkStreamSyntax(runtime, in, filename);
+        
+        // check other scripts specified on argv
+        String[] argv = config.getArgv();
+        if (argv.length > 0) {
+            for (String arg : argv) {
+                status = status && checkFileSyntax(runtime, arg);
+            }
+        }
+        
+        return new Status(status ? 0 : -1);
+    }
+    
+    private boolean checkFileSyntax(Ruby runtime, String filename) {
+        File file = new File(filename);
+        if (file.exists()) {
+            try {
+                return checkStreamSyntax(runtime, new FileInputStream(file), filename);
+            } catch (FileNotFoundException fnfe) {
+                config.getError().println("File not found: " + filename);
+                return false;
+            }
+        } else {
+            return false;
+        }
+    }
+    
+    private boolean checkStreamSyntax(Ruby runtime, InputStream in, String filename) {
+        PrintStream error = config.getError();
         try {
             runtime.parseFromMain(in, filename);
-            config.getOutput().println("Syntax OK for " + filename);
+            error.println("Syntax OK for " + filename);
+            return true;
         } catch (RaiseException re) {
-            status = -1;
             if (re.getException().getMetaClass().getBaseName().equals("SyntaxError")) {
-                config.getOutput().println("SyntaxError in " + re.getException().message(runtime.getCurrentContext()));
+                error.println("SyntaxError in " + re.getException().message(runtime.getCurrentContext()));
             } else {
                 throw re;
             }
+            return false;
         }
-        if (config.getArgv().length > 0) {
-            for (String arg : config.getArgv()) {
-                File argFile = new File(arg);
-                if (argFile.exists()) {
-                    try {
-                        runtime.parseFromMain(new FileInputStream(argFile), arg);
-                        config.getOutput().println("Syntax OK for " + arg);
-                    } catch (FileNotFoundException fnfe) {
-                        status = -1;
-                        config.getOutput().println("File not found: " + arg);
-                    } catch (RaiseException re) {
-                        status = -1;
-                        if (re.getException().getMetaClass().getBaseName().equals("SyntaxError")) {
-                            config.getOutput().println("SyntaxError in " + re.getException().message(runtime.getCurrentContext()));
-                        } else {
-                            throw re;
-                        }
-                    }
-                } else {
-                    status = -1;
-                    config.getOutput().println("File not found: " + arg);
-                }
-            }
-        }
-        return new Status(status);
     }
 
     private void doSetContextClassLoader(Ruby runtime) {
@@ -350,26 +452,26 @@ public class Main {
     }
 
     private void doPrintProperties() {
-        if (config.shouldPrintProperties()) {
-            config.getOutput().print(config.getPropertyHelp());
+        if (config.getShouldPrintProperties()) {
+            config.getOutput().print(OutputStrings.getPropertyHelp());
         }
     }
 
     private void doPrintUsage(boolean force) {
-        if (config.shouldPrintUsage() || force) {
-            config.getOutput().print(config.getBasicUsageHelp());
+        if (config.getShouldPrintUsage() || force) {
+            config.getOutput().print(OutputStrings.getBasicUsageHelp());
         }
     }
 
     private void doShowCopyright() {
         if (config.isShowCopyright()) {
-            config.getOutput().println(config.getCopyrightString());
+            config.getOutput().println(OutputStrings.getCopyrightString());
         }
     }
 
     private void doShowVersion() {
         if (config.isShowVersion()) {
-            config.getOutput().println(config.getVersionString());
+            config.getOutput().println(OutputStrings.getVersionString(config.getCompatVersion()));
         }
     }
 
@@ -399,7 +501,7 @@ public class Main {
                 return 0;
             }
         } else {
-            System.err.print(runtime.getInstanceConfig().getTraceType().printBacktrace(raisedException));
+            System.err.print(runtime.getInstanceConfig().getTraceType().printBacktrace(raisedException, runtime.getPosix().isatty(FileDescriptor.err)));
             return 1;
         }
     }
